--- a/terminology.websearch.scaffold/page/style.css
+++ b/terminology.websearch.scaffold/page/style.css
@@ -290,6 +290,9 @@ h1, h2, h3, h4, h5, h6, p, ol, ul {
   height: 20px;
   font-size: 15px;
 }
+.dirty{
+  background:#FDD;
+}
 h2{
   text-align: center;
 }
